# side

./: .gitignore  README.md  SPEC.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.claude/context-manager/: README.md  config.ts  index.js  index.ts  types.js  types.ts
.claude/context-manager/__tests__/: integration.test.ts  test-utils.ts
.claude/context-manager/actions/: compactor.ts  snapshot.ts  trimmer.ts
.claude/context-manager/core/: analyzer.ts  context-controller.js  context-controller.ts  controller.ts  index.ts  monitor.ts  output-trimmer.js  output-trimmer.ts  session-analyzer.js  session-analyzer.ts  session-compactor.js  session-compactor.ts  session-monitor.js  session-monitor.ts  snapshot-manager.js  snapshot-manager.ts
.claude/context-manager/detectors/: phase-detector.ts  topic-drift.js  topic-drift.ts
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/scripts/: prepare.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/data/: deck-ide.db  deck-ide.db-shm  deck-ide.db-wal
apps/desktop/src-tauri/src/: commands.rs  main.rs  server.rs  tunnel.rs  window.rs
apps/mobile/: App.js  App.tsx  app.json  package.json
apps/server/: package.json  tsconfig.json
apps/web/: .env.development  .env.production  index.html  package.json  tsconfig.json  vite.config.js
docs/: shared-package.md
docs/plans/: 2025-02-03-project-rename.md
scripts/: bundle-server.js
(+168 files in other folders)
